--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
+    "prettier": "^1.19.1",
     "@babel/core": "^7.0.0"
   },
   "private": true
